objects/Contract_Year__c.object
<CustomObject>
    <fields>
        <fullName>Annual_Registrants_2__c</fullName>
        <label>Annual Registrants 2</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Annual_Registrants__c</fullName>
        <label>Annual Registrants</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Fourth_Year_Term_Rack__c</fullName>
        <label>Fourth Year Term Rack</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Fourth_Year_Term__c</fullName>
        <label>Fourth Year Term</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Proposal__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Proposal</label>
        <referenceTo>Proposal__c</referenceTo>
        <relationshipLabel>Contract Years</relationshipLabel>
        <relationshipName>Contract_Years</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Row__c</fullName>
        <label>Row#</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Second_Year_Term_Rack__c</fullName>
        <label>Second Year Term Rack</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Second_Year_Term__c</fullName>
        <label>Second Year Term</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Third_Year_Term_Rack__c</fullName>
        <label>Third Year Term Rack</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Third_Year_Term__c</fullName>
        <label>Third Year Term</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <label>Contract Year</label>
    <nameField>
        <displayFormat>{0000000000}</displayFormat>
        <label>Contract Years Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Contract Years</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>